[B]Version 1.1.163[/B]
- stripchat - fix playback (SD only)
- americass - removed
Fix video playback for FlareSolverr scraped sites (e.g. luxuretv)
- pornxp - fix listing
- celebsroulette - fix playback, gotopage
- awmnetwork - fix playback
- porntn - fix listing